--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -20,7 +20,7 @@
                         <div class="w-full h-56 bg-cover bg-no-repeat blog-img-{{ .File.UniqueID }}">
     
                         </div>
-                        <h2 class="font-neu-bold text-2xl md:text-3xl leading-tight pt-4 pb-3">{{ .Title }}</h2>
+                        <h2 class="font-neu-bold text-2xl md:text-3xl leading-tight pt-4 pb-3">{{ .Title | truncate 100 }}</h2>
                         <p class="font-neu-book text-lg leading-snug pb-4">{{ .Params.excerpt | truncate 100 }}</p>
                         <button class='{{ partial "gCSS/button/default.txt"}}'>
                             Read
@@ -44,7 +44,7 @@
                         <div class="w-full h-56 bg-cover bg-no-repeat blog-img-{{ .File.UniqueID }}">
     
                         </div>
-                        <h2 class="font-neu-bold text-2xl md:text-3xl leading-tight pt-4 pb-3">{{ .Title }}</h2>
+                        <h2 class="font-neu-bold text-2xl md:text-3xl leading-tight pt-4 pb-3">{{ .Title | truncate 100 }}</h2>
                         <p class="font-neu-book text-lg leading-snug pb-4">{{ .Params.excerpt | truncate 100 }}</p>
                         <button class='{{ partial "gCSS/button/default.txt"}}'>
                             Read
@@ -69,7 +69,7 @@
                         <div class="w-full h-56 bg-cover bg-no-repeat blog-img-{{ .File.UniqueID }}">
     
                         </div>
-                        <h2 class="font-neu-bold text-2xl md:text-3xl leading-tight pt-4 pb-3">{{ .Title }}</h2>
+                        <h2 class="font-neu-bold text-2xl md:text-3xl leading-tight pt-4 pb-3">{{ .Title | truncate 100 }}</h2>
                         <p class="font-neu-book text-lg leading-snug pb-4">{{ .Params.excerpt | truncate 100 }}</p>
                         <button class='{{ partial "gCSS/button/default.txt"}}'>
                             Read
@@ -94,7 +94,7 @@
                         <div class="w-full h-56 bg-cover bg-no-repeat blog-img-{{ .File.UniqueID }}">
     
                         </div>
-                        <h2 class="font-neu-bold text-2xl md:text-3xl leading-tight pt-4 pb-3">{{ .Title }}</h2>
+                        <h2 class="font-neu-bold text-2xl md:text-3xl leading-tight pt-4 pb-3">{{ .Title | truncate 100 }}</h2>
                         <p class="font-neu-book text-lg leading-snug pb-4">{{ .Params.excerpt | truncate 100 }}</p>
                         <button class='{{ partial "gCSS/button/default.txt"}}'>
                             Read
@@ -119,7 +119,7 @@
                         <div class="w-full h-56 bg-cover bg-no-repeat blog-img-{{ .File.UniqueID }}">
     
                         </div>
-                        <h2 class="font-neu-bold text-2xl md:text-3xl leading-tight pt-4 pb-3">{{ .Title }}</h2>
+                        <h2 class="font-neu-bold text-2xl md:text-3xl leading-tight pt-4 pb-3">{{ .Title | truncate 100 }}</h2>
                         <p class="font-neu-book text-lg leading-snug pb-4">{{ .Params.excerpt | truncate 100 }}</p>
                         <button class='{{ partial "gCSS/button/default.txt"}}'>
                             Read
