--- a/layouts/page/blog-single.html
+++ b/layouts/page/blog-single.html
@@ -20,6 +20,7 @@
     }
     .blog-content h1, .blog-content h2, .blog-content h3 {
         font-family: 'Neutra2Text_bold';
+        padding-bottom: 25px;
     }
     .blog-content h1 {
         font-size: 40px;
@@ -39,11 +40,14 @@
     }
     .blog-content ol {
         list-style: decimal;
-        white-space: nowrap;
+        padding-bottom: 25px;
     }
     .blog-content ul {
         list-style: disc;
-        white-space: nowrap;
+        padding-bottom: 25px;
+    }
+    .blog-content p {
+        padding-bottom: 25px;
     }
 </style>
 
@@ -62,7 +66,7 @@
             </ul>
         </div>
     </div>
-    <div class="max-w-6xl mx-auto py-12 px-6 whitespace-pre-line blog-content">
+    <div class="max-w-6xl mx-auto py-12 px-6 blog-content">
         {{ .Content | safeHTML }}
     </div>
 </div>
