--- a/themes/site-theme/layouts/partials/head/google-analytics.html
+++ b/themes/site-theme/layouts/partials/head/google-analytics.html
@@ -1,3 +1,13 @@
 {{ if .Site.Data.global_data.tracking.google_analytics }}
 <!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Data.global_data.tracking.google_analytics }}"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', '{{ .Site.Data.global_data.tracking.google_analytics }}');</script>
 {{ else }}{{ end }}
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9M06DMFW2F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9M06DMFW2F');
+</script>
