--- a/themes/site-theme/layouts/_default/baseof.html
+++ b/themes/site-theme/layouts/_default/baseof.html
@@ -18,6 +18,11 @@
 
 <body class="body-wrapper {{ .Param "page_status" }}">
 
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5X56GN4"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 {{ block "header" . }}{{ partial "header.html" . }}{{ end }}
 
 <main role="main">
