--- a/layouts/page/home.html
+++ b/layouts/page/home.html
@@ -120,7 +120,7 @@
             <noscript>
                 <h6 class='{{ partial "gCSS/type/paragraph.txt"}} pb-8'>Enable Javascript to see a map to the West District Statesboro</h6>
             </noscript>
-        <iframe class="google-map pb-6" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3366.9675622993!2d-81.78960548583824!3d32.44680300805819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fa40a8fa50439f%3A0x51654157afb5085b!2s91+S+College+St%2C+Statesboro%2C+GA+30458!5e0!3m2!1sen!2sus!4v1538203040929" width="100%" height="347" frameborder="0" style="border:0" allowfullscreen></iframe> 
+        <iframe class="google-map pb-6" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3366.947167315625!2d-81.78677909999999!3d32.4473489!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fa40a9aa91f715%3A0x33a8685c1c6d3c2f!2s31%20S%20College%20St%2C%20Statesboro%2C%20GA%2030458!5e0!3m2!1sen!2sus!4v1743697788406!5m2!1sen!2sus" width="100%" height="347" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <h6 class='{{ partial "gCSS/type/subtitle.txt"}} pb-1'>{{ .Params.contact_section.map_area.title }}</h6>
         <p class='{{ partial "gCSS/type/paragraph.txt"}} pb-8'>{{ .Site.Data.global_data.address.street }}, {{ .Site.Data.global_data.address.city }}, {{ .Site.Data.global_data.address.state }}. {{ .Site.Data.global_data.address.zip }}</p>
         <h6 class='{{ partial "gCSS/type/subtitle.txt"}} pb-1'>{{ .Params.contact_section.contact_persons.title }}</h6>
